--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:251093261307:ios:010caf9e68cd041bdc095e",
-  "FIREBASE_PROJECT_ID": "horsinaround-639ba",
-  "GCM_SENDER_ID": "251093261307"
+  "GOOGLE_APP_ID": "1:556449440914:ios:b77e40c87bcc16332ff24b",
+  "FIREBASE_PROJECT_ID": "ilkapp-5536a",
+  "GCM_SENDER_ID": "556449440914"
 }
