--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase: ^9.0.3
+  flutterfire: ^0.0.1
+  firebase_auth: ^4.2.10
+  firebase_core: ^2.7.1
 
 dev_dependencies:
   flutter_test:
